# chip8-rs

./: .gitignore  Cargo.toml  README.md
chip8-core/: Cargo.toml
chip8-core/src/: audio.rs  cpu.rs  display.rs  keyboard.rs  lib.rs  ram.rs  stack.rs  state.rs
chip8-sdl/: Cargo.toml
chip8-sdl/src/: audio.rs  display.rs  keyboard.rs  lib.rs  main.rs
src/: display.rs  lib.rs  main.rs  state.rs
