[package]
name = "chip8-rs"
version = "0.1.0"
authors = ["Tamas Florin <tamasflorin@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="chip8"
path="src/lib.rs"

[[bin]]
name="chip8"
path="src/main.rs"

[dependencies]
rand = "0.7.3"
sdl2 = "0.33.0"
