[package]
name = "chip8_sdl"
version = "0.1.0"
authors = ["Tamas Florin <tamasflorin@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = {version = "^0", path="../chip8-core/"}

[dependencies.sdl2]
version = "0.33.0"
features = ["gfx"]